# rust-gui-benchmarks

slint/: Cargo.toml
slint/src/: main.rs
slint/ui/: main.slint
tauri/js_directly_no_ipc/src/: index.html  main.js
tauri/js_directly_no_ipc/src-tauri/src/: main.rs
tauri/native_commands/src/: main.js
tauri/native_commands/src-tauri/: Cargo.toml
tauri/native_commands/src-tauri/src/: main.rs
tauri/native_events/src/: main.js
tauri/native_events/src-tauri/: tauri.conf.json
tauri/native_events/src-tauri/src/: main.rs
tauri/wasm_directly_no_ipc/src/: Cargo.toml  index.html
tauri/wasm_directly_no_ipc/src-tauri/: tauri.conf.json
tauri/wasm_directly_no_ipc/src-tauri/src/: main.rs
tauri/wasm_directly_no_ipc/src/src/: main.rs
tauri/websockets/src/: main.js  styles.css
tauri/websockets/src-tauri/: Cargo.toml
tauri/websockets/src-tauri/src/: main.rs
