[package]
name = "slint-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "0.3", default-features = false, features = ["compat-0-3-0", "std", "backend-winit", "renderer-winit-femtovg"]}
once_cell = "1.17"

[build-dependencies]
slint-build = "0.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3