[package]
name = "wasm-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
opt-level = 3